# 2d_game_engine

./: .gitignore  CMakeLists.txt  make_run.sh
engine/: CMakeLists.txt  camera.cpp  camera.h  debug_draw_element.h  debug_draw_manager.cpp  debug_draw_manager.h  game.cpp  game.h  game_controller.cpp  game_controller.h  game_instance.cpp  game_instance.h  game_object.cpp  game_object.h  game_object_accessor.cpp  game_object_accessor.h  instance_manager.cpp  instance_manager.h  key_event_manager.cpp  key_event_manager.h  logger.h  main.cpp  player.cpp  player.h  raycast_manager.cpp  raycast_manager.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  sprite_manager.cpp  sprite_manager.h  tile.h
src/: .main.cpp.swp  CMakeLists.txt  CMakeLists_OLD.txt  camera.cpp  debug_draw_manager.h  enemy.cpp  enemy.h  game.h  game_object.h  main.cpp  player.cpp  player.h  raycast_manager.h  renderer.h  scene.cpp  scene.h  sdl_key_converter.h  sprite.cpp  sprite.h  tile.h  tile_large.h
